appkube/deployment-my-test-container.yaml
# File: k8s/app-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-test-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-test-container
  template:
    metadata:
      labels:
        app: my-test-container
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
      - name: my-test-container
        image: ghcr.io/0xcryp70/my-test-container:latest
        ports:
        - containerPort: 8282
        - containerPort: 3002
---
# File: k8s/app-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-test-container
spec:
  selector:
    app: my-test-container
  ports:
    - name: http
      port: 8282
      targetPort: 8282
    - name: alt-port
      port: 3002
      targetPort: 3002
