appkube/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
      - name: mongodb
        image: ghcr.io/0xcryp70/my-mongodb:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      - name: mongodb-exporter
        image: percona/mongodb_exporter:0.40
        ports:
        - containerPort: 9216
      volumes:
      - name: mongodb-data
        hostPath:
          path: /mongodb-data
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 9216
      targetPort: 9216

---
# File: k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
