appkube/nginx.yml

# File: k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: nginx
        image: crxc0d3r/my-nginx:latest
        ports:
        - containerPort: 80
        # Configure Nginx to expose the status
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:latest
        args:
        - -nginx.scrape-uri=http://nginx-m:7777/nginx_status
        ports:
        - containerPort: 9113

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 9113
      targetPort: 9113
---
# File: k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-m
spec:
  selector:
    app: nginx-m
  ports:
    - protocol: TCP
      port: 7777
      targetPort: 7777
