appkube/alert.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: alert.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager-my-prometheus-kube-prometh-alertmanager
                port:
                  number: 9093
