appkube/deploy.yml
# File: k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
      - name: mongodb
        image: ghcr.io/0xcryp70/my-mongodb:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
      volumes:
      - name: mongodb-data
        hostPath:
          path: /mongodb-data
          type: DirectoryOrCreate

---
# File: k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017

---
# File: k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-js-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-js-app
  template:
    metadata:
      labels:
        app: my-js-app
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: my-js-app
        image: crxc0d3r/my-js-app:latest
        ports:
        - containerPort: 8080
        - containerPort: 3001
---
# File: k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-js-app
spec:
  selector:
    app: my-js-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: alt-port
      port: 3001
      targetPort: 3001

---
# File: k8s/app-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-js-app-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-js-app-test
  template:
    metadata:
      labels:
        app: my-js-app-test
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
      - name: my-js-app-test
        image: ghcr.io/0xcryp70/my-js-app-test:latest
        ports:
        - containerPort: 8181
        - containerPort: 3000
---
# File: k8s/app-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-js-app-test
spec:
  selector:
    app: my-js-app-test
  ports:
    - name: http
      port: 8181
      targetPort: 8181
    - name: alt-port
      port: 3000
      targetPort: 3000

---
# File: k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: nginx
        image: crxc0d3r/my-nginx:latest
        ports:
        - containerPort: 80

---
# File: k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# File: k8s/mongoface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoface
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoface
  template:
    metadata:
      labels:
        app: mongoface
    spec:
      containers:
      - name: mongoface
        image: samueltallet/mongodb-php-gui
        ports:
        - containerPort: 5000

---
# File: k8s/mongoface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongoface
spec:
  selector:
    app: mongoface
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

---

# File: k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
  - host: my-js-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-js-app
            port:
              number: 8080

  - host: appbeta.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: api2.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: mongoface667.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoface
            port:
              number: 80

  - host: jhwbed2322hba.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017

---
