appkube/grafana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-prometheus-grafana
                port:
                  number: 80
