appkube/ingress.yml

# File: k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
  - host: my-js-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-js-app
            port:
              number: 8080

  - host: appbeta.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: test.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: app.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: api.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: api2.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: mongoface667.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoface
            port:
              number: 80

  - host: jhwbed2322hba.tonlottery.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: alert.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-prometheus-kube-prometh-alertmanager
                port:
                  number: 9093

---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-prometheus-grafana
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: prom.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-prometheus-kube-prometh-prometheus
                port:
                  number: 9090
