appkube/prom.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  ingressClassName: "nginx"
  rules:
    - host: prom.tonlottery.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-my-prometheus-kube-prometh-prometheus
                port:
                  number: 9090
